fix jump on scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,12 +135,16 @@
     text-decoration: none;
 }
 
+#placeholder {
+    height: 100px;
+}
+
 .sticky {
     position: fixed;
     top: 0;
     width: 100%;
     padding-top: 60px;
-    transition: 0.2ms;
+    transition-duration: 0.2s;
 }
 
 #bottom {
@@ -236,7 +240,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: 160px;
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 .filterDiv {
@@ -251,3 +255,5 @@
     background-color: #f2f2f2;
     display: flex;
 }
+
+.order {}
